# AbyssEngineOld

./: .clang-format  .editorconfig  .gitignore  CHANGELOG.md  CMakeDMGSetup.scp  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  README.md  conanfile.txt  config.h.in  scriptdefs.txt  vcpkg.json
abyssengine/: CMakeLists.txt  MacOSXBundleInfo.plist.in  abyssbadge.icns
abyssengine/src/: abyssengine.c  abyssengine.cpp  commondef.h
abyssengine/src/common/: align.c  align.h  alignment.cpp  blendmode.c  blendmode.cpp  blendmode.h  color.h  events.h  inifile.cpp  inifile.h  overload.h  rectangle.h  ringbuffer.cpp  ringbuffer.h  string.c  string.h
abyssengine/src/engine/: cascprovider.cpp  cascprovider.h  engine.c  engine.cpp  engine.h  filesystemprovider.cpp  filesystemprovider.h  loader.cpp  loader.h  modeboot.c  modeboot.h  modecrash.c  modecrash.h  moderun.c  moderun.h  modevideo.c  modevideo.h  mpqprovider.cpp  mpqprovider.h  provider.h  spritefont.c  spritefont.cpp  spritefont.h  sysfont.c  sysfont.h  ttffont.c  ttffont.h
abyssengine/src/hostnotify/: hostnotify_mac.cpp
abyssengine/src/loader/: cascloader.c  cascloader.cpp  cascloader.h  filesystemloader.c  filesystemloader.h  loader.c  loader.h  loaderprovider.c  loaderprovider.h  mpqloader.c  mpqloader.h
abyssengine/src/lua/: loadlib.c
abyssengine/src/misc/: appcompat.c  appcompat.h  ini.c  ini.h  resources.c  resources.h  util.c  util.h
abyssengine/src/node/: button.cpp  button.h  d2rsprite.cpp  dc6sprite.cpp  dc6sprite.h  label.cpp  label.h  node.c  node.cpp  node.h  sprite.cpp  sprite.h  video.cpp  video.h
abyssengine/src/scripting/: addloaderprovider.c  createbutton.c  createlabel.c  createtimer.c  exitbootmode.c  fileexists.c  getconfig.c  getrootnode.c  loadpalette.c  loadsprite.c  loadspritefont.c  loadstring.c  loadttffont.c  log.c  node.c  node.h  playvideo.c  resetmousestate.c  scripthost.cpp  scripthost.h  scripting.c  scripting.h  setboottext.c  setcursor.c  showsystemcursor.c  shutdown.c  sleep.c
abyssengine/src/systemio/: interface.cpp  interface.h
abysstoolset/: CMakeLists.txt
abysstoolset/src/: abt.c  abt.cpp  common.c  common.h  help.c  help.h  mpqtool.c  mpqtool.h
apps/abyssengine/: CMakeLists.txt  macos.entitlements  resource.rc
apps/abyssengine/embed/: attribution.txt
apps/abyssengine/src/: abyssengine.cpp
apps/abysstoolset/: CMakeLists.txt
apps/abysstoolset/src/: abt.cpp
libabyss/: CMakeLists.txt
libabyss/include/libabyss/: abysssprite.h  audiostream-vlc.h  audiostream.h  boundsdefs.h  casc.h  cascstream.h  commondef.h  d2r_sprite.h  dc6.h  dcc.h  dt1.h  error.h  inifile.h  inputstream.h  libabyss.h  log.h  mpq.h  mpqblock.h  mpqstream.h  palette.h  streamreader.h  threading.h  utils.h
libabyss/src/: abysssprite.cpp  audiostream-vlc.cpp  audiostream.cpp  bitstream.c  bitstream.h  blast.c  blast.h  casc.cpp  cascstream.cpp  compress.c  compress.h  crypto.c  crypto.h  d2r_sprite.c  dc6.c  dc6.cpp  dcc.c  dt1.cpp  error.c  huffman.c  huffman.h  inifile.cpp  log.c  mpq.c  mpq.cpp  mpqblock.c  mpqstream.c  mpqstream.cpp  palette.c  palette.cpp  pngloader.cpp  pngloader.h  ringbuffer.cpp  streamreader.c  streamreader.cpp  streamreader.h  streamwriter.c  streamwriter.h  threading_unix.c  threading_windows.c  (+1 more)
libabyss/src/common/: pngloader.cpp  ringbuffer.cpp
libabyss/src/streams/: audiostream-vlc.cpp  audiostream.cpp  bytearraystream.cpp  cascstream.cpp  mpqstream.cpp  streamreader.cpp
libabyss/src/zone/: zone.cpp  zonestamp.cpp  zonetile.cpp
src/Abyss/: AbyssEngine.cpp  AbyssEngine.h  AbyssEngine.hpp  AbyssEngine.ixx  CMakeLists.txt  Singletons.cpp  Singletons.h  Singletons.hpp  Singletons.ixx
src/Abyss/Common/: Animation.h  Animation.hpp  Animation.ixx  Button.h  Button.hpp  Button.ixx  CommandLineOpts.cpp  CommandLineOpts.h  CommandLineOpts.hpp  CommandLineOpts.ixx  Configuration.cpp  Configuration.h  Configuration.hpp  Configuration.ixx  Drawable.h  Drawable.hpp  Drawable.ixx  FileProvider.hpp  FileProvider.ixx  Huffman.cpp  Huffman.h  Huffman.hpp  Huffman.ixx  JSON.cpp  JSON.h  Logging.cpp  Logging.h  Logging.hpp  Logging.ixx  MouseProvider.h  MouseProvider.hpp  MouseProvider.ixx  MouseState.cpp  MouseState.h  MouseState.hpp  MouseState.ixx  RendererProvider.h  RendererProvider.ixx  RingBuffer.h  RingBuffer.hpp  (+11 more)
src/Abyss/Concepts/: Drawable.h  Drawable.ixx  FontRenderer.h  FontRenderer.ixx
src/Abyss/DataTypes/: DC6.cpp  DC6.h  DC6.hpp  DC6.ixx  DC6Frame.cpp  DC6Frame.h  DC6Frame.hpp  DC6Frame.ixx  DS1.cpp  DS1.h  DT1.cpp  DT1.h  Palette.cpp  Palette.h  Palette.hpp  Palette.ixx
src/Abyss/Enums/: BlendMode.hpp  BlendMode.ixx  MouseButton.h  MouseButton.hpp  MouseButton.ixx
src/Abyss/FileSystem/: CASC.cpp  CASC.h  CASC.ixx  Direct.cpp  Direct.h  FileLoader.cpp  FileLoader.h  FileLoader.ixx  InputStream.cpp  InputStream.h  InputStream.ixx  MPQ.cpp  MPQ.h  MPQ.ixx  Provider.h  Provider.ixx
src/Abyss/Layouts/: Layout.cpp  Layout.h  Profile.cpp  Profile.h
src/Abyss/MPQ/: BlockEntry.cpp  BlockEntry.h  BlockEntry.hpp  BlockEntry.ixx  Crypto.cpp  Crypto.h  Crypto.hpp  Crypto.ixx  File.cpp  File.h  File.hpp  File.ixx  HashEntry.cpp  HashEntry.h  HashEntry.hpp  HashEntry.ixx  Header.cpp  Header.h  Header.ixx
src/Abyss/MapEngine/: MapEngine.cpp  MapEngine.h
src/Abyss/Streams/: AudioStream.cpp  AudioStream.h  AudioStream.hpp  AudioStream.ixx  InputStream.cpp  InputStream.h  InputStream.hpp  InputStream.ixx  MPQStream.cpp  MPQStream.h  MPQStream.hpp  MPQStream.ixx  SoundEffect.cpp  SoundEffect.h  SoundEffect.ixx  StreamReader.cpp  StreamReader.h  StreamReader.hpp  StreamReader.ixx  VideoStream.cpp  VideoStream.h  VideoStream.ixx
src/Abyss/UI/: Button.h  Button.ixx  ButtonDef.h  ButtonDef.ixx  Label.cpp  Label.h  Label.ixx  SpriteFont.h  SpriteFont.ixx
src/OD2/: CMakeLists.txt  MacOSXBundleInfo.plist.in  Startup.cpp  Startup.h  Startup.ixx  main.cpp  main.ixx
src/OD2/Common/: ButtonDefManager.cpp  ButtonDefManager.h  ButtonDefManager.ixx  DataTableManager.cpp  (+10 more)
tests/: CMakeLists.txt  bitstream_test.cpp  hello_test.cc  mpq_test.cpp  ringbuffer_test.cpp
(+154 files in other folders)
